tests/sources/invalid/enums/enum_construct_move_errors.fire
// Regression test: passing an owned identifier as an enum variant payload
// argument must move it, just like a function/constructor/method call would.
// Using the identifier afterward is a use-after-move error.
import @firescript/std.io.println;

class Box {
    label: string;

    fn Box(label: string) {
        this.label = label;
    }
}

enum Slot {
    Holds(inner: Box),
    Vacant
}

b: Box = Box("boxed");
s: Slot = Slot.Holds(b);
println(b.label);  //~ ERROR FS-SEM-0001 @9
